Unused imports deleted and reformat of code